Revision history for Perl module WWW::Gazetteer::Getty: 

0.11
   - perltidy
   - use new URLs and HTML
   - add computer-readable license

0.10 Fri Oct 25 17:22:19 BST 2002
	- first released version