@@ -4,6 +4,7 @@ Revision history for Perl module WWW::Gazetteer::Getty:
    - perltidy
    - use new URLs and HTML
    - add computer-readable license
+   - add human-readable license
 
 0.10 Fri Oct 25 17:22:19 BST 2002
 	- first released version
